Replaced deprecated method call Class.newInstance.